--- a/index.html
+++ b/index.html
@@ -13,6 +13,60 @@
 </head>
 
 <body>
-  <script src="script.js"></script>
+  <script>
+    function getFibos(n) {
+      var fibs = [0, 1];
+      var a = 0;
+      var b = 1;
+      var c = 1;
+      for (i = 0; i < n; i++) {
+        c = a + b;
+        a = b;
+        b = c;
+        fibs.push(c);
+      }
+      return fibs;
+    }
+    8
+    function reverseInt(num) {
+      return (
+        parseInt(
+          num
+            .toString()
+            .split('')
+            .reverse()
+            .join('')
+        ) * Math.sign(num)
+      )
+    }
+
+
+    function isArithmeticProgression(nums) {
+
+      if (nums.length <= 1) {
+        return false;
+      }
+      var difference = nums[1] - nums[0];
+
+      for (i = 1; i < (nums.length - 1); i++) {
+        console.log((nums[i + 1] - nums[i]) == difference)
+        if ((nums[i + 1] - nums[i]) == difference) {
+          return false;
+        }
+      }
+      return true;
+    }
+
+
+    function pushBack(nums){
+      
+      for(let i = 0; i<nums.length;i++){
+        if(nums[i] === 0 || (nums[i] % 10) === 0){
+          nums.pop(nums[i]).push(nums[i])
+        }
+      }
+      return nums;
+    }
+  </script>
 </body>
 </html>
